# smessaging

./: .gitignore  Makefile.am  Makefile.in  README.md  acinclude.m4  configure  configure.ac  ulapi.m4
config/: config.h.in
lib/: Makefile.am  Makefile.in
src/: nodemgr.c  querytest.c  reporttest.c  serdes.c  serdes.h  serdes_decode.c  serdes_encode.c  serdes_gen.c  smsg.c  smsg.h
win32/: libsmsg.sln  libsmsg.vcxproj
win32/querytest/: querytest.vcxproj
win32/reporttest/: reporttest.vcxproj
